--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "bundle/surround"]
 	path = bundle/surround
 	url = git://github.com/tpope/vim-surround.git
+[submodule "bundle/vim-hack"]
+	path = bundle/vim-hack
+	url = https://github.com/hhvm/vim-hack
